@@ -44,9 +44,12 @@ private[spark] class YarnClientSchedulerBackend(
   override def start() {
     super.start()
 
+    // Fixed by moses
+    /*
     val userJar = System.getenv("SPARK_YARN_APP_JAR")
     if (userJar == null)
       throw new SparkException("env SPARK_YARN_APP_JAR is not set")
+    */
 
     val driverHost = conf.get("spark.driver.host")
     val driverPort = conf.get("spark.driver.port")
@@ -55,7 +58,7 @@ private[spark] class YarnClientSchedulerBackend(
     val argsArrayBuf = new ArrayBuffer[String]()
     argsArrayBuf += (
       "--class", "notused",
-      "--jar", userJar,
+      "--jar", null, // The primary jar will be added dynamically in SparkContext.
       "--args", hostport,
       "--master-class", "org.apache.spark.deploy.yarn.WorkerLauncher"
     )
